fix z-index on sticky footer and fix breadcrumb putting back .sub-header class

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -649,4 +649,5 @@ textarea::placeholder {
   bottom: 0;
   padding: $default-padding 0;
   background-color: $white;
+  z-index: 2;
 }
